Fix bookshelf form z-index bug. Add dependent destroy to bookshelf model. Update gemfile for vulnerabilities.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -272,6 +272,7 @@ header {
         align-items: center;
         position: absolute;
         padding-top: 15vh;
+        z-index: 2;
         h2 {
             padding: 1vmin;
             margin: 1vmin 3vmin;
